fix line breaks in header & process

--- a/src/styles/_header-info.scss
+++ b/src/styles/_header-info.scss
@@ -1,7 +1,7 @@
 .header-info {
+  max-width: 380px;
   color: #fff;
   padding-top: 120px;
-  padding-right: 150px;
 
   &__heading {
     font-weight: 600;
