--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -26,6 +26,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding-left: 140px;
+    margin: auto;
   }
 }
 
