--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,6 +2,7 @@ $header-background-color: #008aff;
 $highlight-hover-color: #ff9c8e;
 $hover-duration: 0.5s;
 $small-screen-breakpoint: 1024px;
+$large-screen-breakpoint: 1600px;
 $card-1-color: #56ccf2;
 $card-2-color: #fcc91d;
 $card-3-color: #15d850;
